<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
<string name="accept_location">Record Location</string>
<string name="accuracy">Accuracy</string>
<string name="activity_not_found">No activity found to handle: %s</string>
<string name="add_another">Add Group</string>
<string name="add_another_repeat">Add another \"%s\" group?</string>
<string name="add_more">Add more</string>
<string name="add_repeat">Add a new \"%s\" group?</string>
<string name="add_repeat_no">Do Not Add</string>
<string name="advance">forward</string>
<string name="altitude">Altitude</string>
<string name="audio_file_error">No audio file was specified.</string>
<string name="audio_file_invalid">File: %s is not a valid audio file.</string>
<string name="backup">backward</string>
<string name="barcode_scanner_error">Sorry, Barcode Scanner is not installed!</string>
<string name="byline">by Medic Mobile</string>
<string name="cancel">Cancel</string>
<string name="cancel_loading_form">Cancel</string>
<string name="cancel_location">Cancel</string>
<string name="cancel_saving_form">Cancel</string>
<string name="cannot_edit_completed_form">This form cannot be edited once it has been marked as complete. It may be encrypted.</string>
<string name="capture_audio">Record Sound</string>
<string name="capture_image">Take Picture</string>
<string name="capture_video">Record Video</string>
<string name="change_language">Change Language</string>
<string name="change_password">Server Password</string>
<string name="change_protocol_settings_default">Platform Settings</string>
<string name="change_sms_gateway">Gateway Phone Number</string>
<string name="change_own_phone_number">Own Phone Number</string>
<string name="change_username">Server Username</string>
<string name="clearanswer_confirm">Remove the response to \"%s\"?</string>
<string name="clear_answer">Remove response</string>
<string name="clear_answer_ask">Remove This Response?</string>
<string name="clear_answer_no">Cancel</string>
<string name="completed_data">Complete (%s)</string>
<string name="data">Saved Forms</string>
<string name="data_saved_error">Sorry, form save failed!</string>
<string name="data_saved_ok">Form successfully saved!</string>
<string name="save_point_error">Error saving recovery point: %s</string>
<string name="default_completed">Default to finalized</string>
<string name="default_completed_summary">Mark form as finalized by default</string>
<string name="delete_confirm">Delete %s form(s)?</string>
<string name="delete_file">Delete Selected</string>
<string name="delete_no">Do Not Delete</string>
<string name="delete_repeat">Remove group</string>
<string name="delete_repeat_ask">Remove This Group?</string>
<string name="delete_repeat_confirm">Remove group \"%s\" and all of its sub-groups?</string>
<string name="delete_repeat_no">Cancel</string>
<string name="delete_yes">Delete Forms</string>
<string name="discard_answer">Remove response</string>
<string name="discard_group">Remove group</string>
<string name="download">Get Selected</string>
<string name="download_forms_result">Download Result</string>
<string name="downloading_data">Connecting to Server</string>
<string name="do_not_change">Cancel</string>
<string name="do_not_exit">Cancel</string>
<string name="do_not_save">Ignore Changes</string>
<string name="entering_repeat">Add Group</string>
<string name="entering_repeat_ask">Add New Group?</string>
<string name="enter_data">Fill Blank Form</string>
<string name="enter_data_button">Fill Blank Form</string>
<string name="error_occured">Error Occurred</string>
<string name="error_attaching_binary_file">An error occurred while attaching the media: %s</string>
<string name="error_prefix">Error: </string>
<string name="fetching_file">Getting %1$s.\n\nForm %2$s of %3$s form(s).</string>
<string name="file_deleted_error">Sorry, %1$s of %2$s selected form(s) failed to delete!</string>
<string name="file_deleted_ok">%s form(s) successfully deleted!</string>
<string name="file_delete_in_progress">Sorry, a form delete action is already in progress!</string>
<string name="file_invalid">File: %s is invalid.</string>
<string name="file_missing">File: %s is missing.</string>
<string name="finished_disk_scan">Finished scanning. All forms loaded.</string>
<string name="forms">Blank Forms</string>
<string name="getting_location">Loading Location</string>
<string name="get_barcode">Get Barcode</string>
<string name="get_forms">Get Blank Form</string>
<string name="get_location">Record Location</string>
<string name="provider_disabled_error">Sorry, Location providers are disabled!</string>
<string name="invalid_answer_error">Sorry, this response is invalid!</string>
<string name="jump_to_beginning">Go To Start</string>
<string name="jump_to_end">Go To End</string>
<string name="jump_to_previous">Go Up</string>
<string name="latitude">Latitude</string>
<string name="leave_repeat_yes">Do Not Add</string>
<string name="leaving_repeat_ask">Add One More Group?</string>
<string name="list_failed_with_error">Form listing failed. %s.</string>
<string name="loading_form">Loading Form</string>
<string name="load_remote_form_error">Error Getting Form List</string>
<string name="location_provider_accuracy">Using %1$s. Accuracy is %2$s m.</string>
<string name="location_accuracy">Accuracy is %1$s m</string>
<string name="longitude">Longitude</string>
<string name="main_menu">Main Menu</string>
<string name="main_menu_details">We are all health workers</string>
<string name="manage_files">Delete Saved Form</string>
<string name="mark_finished">Mark form as finalized</string>
<string name="noselect_error">Sorry, you have not selected any forms!</string>
<string name="no_connection">No network connection available</string>
<string name="no_items_display">Nothing available to display.</string>
<string name="no_items_display_forms">Nothing available to display.\n\nTry getting and filling out a blank form.</string>
<string name="no_items_display_instances">Nothing available to display.\n\nTry finalizing saved forms before sending.</string>
<string name="notification_config">Notification preferences</string>
<string name="notification_category">Notifications</string>
<string name="notification_toggle">Show notifications</string>
<string name="notification_toggle_summary">Notifications shown in the Android status bar</string>
<string name="notification_schedule">Schedule for notifications</string>
<string name="change_notification_schedule">Cron-style schedule</string>
<string name="notification_schedule_not_saved">Schedule not saved</string>
<string name="notification_schedule_error">The notification schedule was not saved as it is not a valid schedule. Please try again with a valid cron-style schedule, as in the examples below.\n\nFirst day of every month at 8am:\n0 8 1 * *\n\nLast day of the month to February at 2pm:\n0 14 L * *\n\nEvery weekday at 4pm\n0 16 * * MON-FRI</string>
<string name="notification_title">Notification title</string>
<string name="change_notification_title">Notification title</string>
<string name="notification_content">Notification content</string>
<string name="change_notification_content">Notifications content</string>
<string name="ok">OK</string>
<string name="parse_error">Sorry, unable to parse form.</string>
<string name="parse_legacy_formlist_failed">The server has not provided an available-forms document compatible with Aggregate 0.9.x. : %s</string>
<string name="parse_openrosa_formlist_failed">The server has not provided an available-forms document compatible with the OpenRosa version 1.0 standard: %s</string>
<string name="password">Password</string>
<string name="play_audio">Play Sound</string>
<string name="play_video">Play Video</string>
<string name="please_wait">Please wait a few moments.</string>
<string name="please_wait_google_drive">Please wait. Accessing Google Drive.</string>
<string name="please_wait_long">Please wait. This could take a few minutes.</string>
<string name="quit_application">Exit %s</string>
<string name="quit_entry">Save Form and Exit</string>
<string name="refresh">Refresh</string>
<string name="replace_barcode">Replace Barcode</string>
<string name="replace_location">Replace Location</string>
<string name="required_answer_error">Sorry, this response is required!</string>
<string name="review_data">Edit Saved Form</string>
<string name="review_data_button">Edit Saved Form (%s)</string>
<string name="saved_data">Incomplete (%s)</string>
<string name="save_all_answers">Save Form</string>
<string name="save_enter_data_description">Thank you for completing %s.</string>
<string name="saving_form">Saving Form</string>
<string name="sending_items">Sending %1$s of %2$s form(s)</string>
<string name="send_data">Send Finalized Form</string>
<string name="send_data_button">Send Finalized Form (%s)</string>
<string name="send_selected_data">Send (Internet)</string>
<string name="send_selected_data_sms">Send (SMS)</string>
<string name="server_auth_credentials">Please enter username and password for server:\n%s</string>
<string name="server_requires_auth">Server Requires Authentication</string>
<string name="server_url">URL</string>
<string name="server_preferences">Server Settings</string>
<string name="shortcut">Medic Mobile Form</string>
<string name="shortcut_select_title">Select Form</string>
<string name="sms_gateway">Gateway phone number</string>
<string name="sms_gateway_summary">Phone number that receives the forms when sending via SMS</string>
<string name="own_phone_number">Own phone number</string>
<string name="own_phone_number_summary">Phone number of the person submitting the forms</string>
<string name="own_phone_number_missing_error">Missing \'Own phone number\' in \'Configure platform settings\'</string>
<string name="sms_upload">Upload SMS payload</string>
<string name="sms_upload_summary">Check this option to use the SMS content instead of the XML when uploading forms</string>
<string name="toggle_selected">Toggle All</string>
<string name="trigger">OK. Please continue.</string>
<string name="uploading_data">Sending Form</string>
<string name="username">Username</string>
<string name="click_to_web">Tap to visit http://medicmobile.org</string>
<string name="client">User Interface</string>
<string name="show_splash">Show splash screen</string>
<string name="show_splash_summary">Shows when application starts</string>
<string name="splash_path">Selected splash image</string>
<string name="default_splash_path">Default</string>
<string name="change_formlist_url">Form list path (appended to URL)</string>
<string name="protocol">Platform</string>
<string name="change_protocol">Platform</string>
<string name="change_submission_url">Submission path (appended to URL)</string>
<string name="formlist_url">Form list path</string>
<string name="submission_url">Submission path</string>
<string name="font_size">Text font size</string>
<string name="change_font_size">Text font size</string>
<string name="selected_google_account_text">Google account</string>
<string name="autosend">Auto Send</string>
<string name="autosend_wifi">Auto send with Wi-Fi</string>
<string name="autosend_wifi_summary">Auto send when Wi-Fi is available</string>
<string name="autosend_network">Auto send with network</string>
<string name="autosend_network_summary">Auto send when network is available</string>
<string name="navigation">Navigation</string>
<string name="constraint_behavior">Constraint processing behavior</string>
    <string name="high_resolution_summary">Enable high-resolution video recordings</string>
    <string name="high_resolution">Enable hi-res video</string>
<string name="protocol_settings">Configure platform settings</string>
<string name="other_preferences">Other platform settings</string>
<string name="delete_after_send">Delete after send</string>
<string name="delete_after_send_summary">Deletes finalized forms and media after sending to server</string>
</resources>