<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:id="@+id/info"
        android:key="info"
        android:summary="@string/click_to_web"
        android:title="@string/app_name" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://opendatakit.org" />
    </PreferenceScreen>

    <PreferenceCategory
        android:key="@string/server_preferences"
        android:title="@string/server_preferences" >
        <ListPreference
            android:id="@+id/protocol"
            android:defaultValue="medic_mobile_protocol"
            android:dialogTitle="@string/change_protocol"
            android:entries="@array/protocol_entries"
            android:entryValues="@array/protocol_entry_values"
            android:key="protocol"
            android:title="@string/protocol" />
        <PreferenceScreen
        	android:key="protocol_settings"
        	android:title="@string/protocol_settings"/>
        <ListPreference
            android:id="@+id/selected_google_account"
            android:defaultValue=""
            android:key="selected_google_account"
            android:title="@string/selected_google_account_text" />
        <EditTextPreference
            android:id="@+id/username"
            android:defaultValue="@string/default_username"
            android:dialogTitle="@string/change_username"
            android:inputType="textNoSuggestions"
            android:key="username"
            android:title="@string/username" />
        <EditTextPreference
            android:id="@+id/password"
            android:defaultValue="@string/default_password"
            android:dialogTitle="@string/change_password"
            android:inputType="textNoSuggestions"
            android:key="password"
            android:title="@string/password" />
        <EditTextPreference
            android:id="@+id/own_phone_number"
			android:defaultValue="@string/default_own_phone_number"
            android:dialogTitle="@string/change_own_phone_number"
            android:inputType="phone"
            android:key="own_phone_number"
            android:title="@string/own_phone_number" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/autosend"
        android:title="@string/autosend" >
        <CheckBoxPreference
            android:id="@+id/autosend_wifi"
            android:defaultValue="false"
            android:key="autosend_wifi"
            android:summary="@string/autosend_wifi_summary"
            android:title="@string/autosend_wifi" />
        <CheckBoxPreference
            android:id="@+id/autosend_network"
            android:defaultValue="false"
            android:key="autosend_network"
            android:summary="@string/autosend_network_summary"
            android:title="@string/autosend_network" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/notification_category"
        android:title="@string/notification_category" >
        <CheckBoxPreference
            android:id="@+id/notification_toggle"
            android:defaultValue="false"
            android:key="notification_toggle"
            android:summary="@string/notification_toggle_summary"
            android:title="@string/notification_toggle" />
        <EditTextPreference
            android:id="@+id/notification_schedule"
            android:defaultValue="@string/default_notification_schedule"
            android:dialogTitle="@string/change_notification_schedule"
            android:inputType="textNoSuggestions"
            android:layout="?android:attr/preferenceLayoutChild"
            android:key="notification_schedule"
            android:title="@string/notification_schedule" />
        <EditTextPreference
            android:id="@+id/notification_title"
            android:defaultValue="@string/default_notification_title"
            android:dialogTitle="@string/change_notification_title"
            android:inputType="text"
            android:layout="?android:attr/preferenceLayoutChild"
            android:key="notification_title"
            android:title="@string/notification_title" />
        <EditTextPreference
            android:id="@+id/notification_content"
            android:defaultValue="@string/default_notification_content"
            android:dialogTitle="@string/change_notification_content"
            android:inputType="text"
            android:layout="?android:attr/preferenceLayoutChild"
            android:key="notification_content"
            android:title="@string/notification_content" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="@string/client"
        android:title="@string/client" >
       <ListPreference android:id="@+id/constraint_behavior"
            android:defaultValue="on_swipe"
            android:dialogTitle="@string/constraint_behavior"
            android:entries="@array/constraint_behavior_entries"
            android:entryValues="@array/constraint_behavior_entry_values"
            android:key="constraint_behavior"
            android:title="@string/constraint_behavior" />
       <ListPreference
            android:id="@+id/navigation"
            android:defaultValue="swipe"
            android:dialogTitle="@string/navigation"
            android:entries="@array/navigation_entries"
            android:entryValues="@array/navigation_entry_values"
            android:key="navigation"
            android:title="@string/navigation" />
        <ListPreference
            android:id="@+id/font_size"
            android:defaultValue="21"
            android:dialogTitle="@string/change_font_size"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_entry_values"
            android:key="font_size"
            android:title="@string/font_size" />
        <CheckBoxPreference
            android:id="@+id/default_completed"
            android:defaultValue="true"
            android:key="default_completed"
            android:summary="@string/default_completed_summary"
            android:title="@string/default_completed" />
        <CheckBoxPreference
            android:id="@+id/delete_after_send"
            android:key="delete_send"
            android:summary="@string/delete_after_send_summary"
            android:title="@string/delete_after_send"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:id="@+id/high_resolution"
            android:defaultValue="true"
            android:key="high_resolution"
            android:summary="@string/high_resolution_summary"
            android:title="@string/high_resolution" />
        <CheckBoxPreference
            android:id="@+id/show_splash"
            android:key="showSplash"
            android:summary="@string/show_splash_summary"
            android:title="@string/show_splash" />
        <PreferenceScreen
            android:id="@+id/splash_path"
            android:defaultValue="@string/default_splash_path"
            android:dependency="showSplash"
            android:key="splashPath"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/splash_path" />
    </PreferenceCategory>

</PreferenceScreen>